force-app/main/default/objects/Opportunity/fields/cur_ExpectedValue__c.field-meta.xml
<CustomField>
    <fullName>cur_ExpectedValue__c</fullName>
    <description>The value manually updated by KAM/SCO based on predictions.</description>
    <inlineHelpText>The value manually updated by KAM/SCO based on predictions.</inlineHelpText>
    <label>Expected Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>