force-app/main/default/objects/Opportunity/fields/fchk_ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>fchk_ReminderDate__c</fullName>
    <description>This field is used in a flow to send alerts  on chatter about the opportunities that has not been updated</description>
    <formula>AND(DATEVALUE(LastModifiedDate) =  DATEVALUE(CreatedDate) , CloseDate-29  =  TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Date</label>
    <type>Checkbox</type>
</CustomField>