force-app/main/default/objects/Opportunity/fields/fcur_WeightedValue__c.field-meta.xml
<CustomField>
    <fullName>fcur_WeightedValue__c</fullName>
    <formula>If(ISBLANK(cur_ExpectedValue__c) || ISBLANK(TEXT(pkl_CompetitionRating__c)), NULL, cur_ExpectedValue__c * VALUE(SUBSTITUTE(TEXT(pkl_CompetitionRating__c), &quot;%&quot;, &quot;&quot;)) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>