force-app/main/default/objects/Opportunity/fields/lkp_SalesDataCustomer__c.field-meta.xml
<CustomField>
    <fullName>lkp_SalesDataCustomer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Structure sales based on a regional division of the market.</description>
    <label>Sales Data Customer</label>
    <referenceTo>SalesAreaLink__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>