force-app/main/default/objects/Opportunity/fields/lkp_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>lkp_SalesOrganization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>