force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>