force-app/main/default/objects/Opportunity/fields/Loss_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Description__c</fullName>
    <description>A more detailed description of the lost deal</description>
    <inlineHelpText>Detailed description of the lost deal</inlineHelpText>
    <label>Loss Reason Description</label>
    <type>TextArea</type>
</CustomField>