force-app/main/default/objects/Opportunity/fields/Opportunity_Id_number__c.field-meta.xml
<CustomField>
    <fullName>OpportunityIdnumber__c</fullName>
    <description>Displays the opportunity Id number starts with number from 10000000 </description>
    <label>Opportunity Id number</label>
    <startingNumber>10000000</startingNumber>
    <type>AutoNumber</type>
</CustomField>