force-app/main/default/objects/Opportunity/fields/pkl_Category__c.field-meta.xml
<CustomField>
    <fullName>pkl_Category__c</fullName>
    <inlineHelpText>Please provide value other then &#39;None&#39;</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Day2Day</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>