force-app/main/default/objects/Opportunity/fields/pkl_CompetitionRating__c.field-meta.xml
<CustomField>
    <fullName>pkl_CompetitionRating__c</fullName>
    <label>Competition Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>