force-app/main/default/objects/Opportunity/fields/pkl_LossReason__c.field-meta.xml
<CustomField>
    <fullName>pkl_LossReason__c</fullName>
    <description>The field specify the reason for closing an Opportunity as &quot;Close Lost&quot;</description>
    <inlineHelpText>Reason for loss can be tracked in this field.</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>