force-app/main/default/objects/Opportunity/fields/pkl_StatusofPlaniswareSync__c.field-meta.xml
<CustomField>
    <fullName>pkl_StatusofPlaniswareSync__c</fullName>
    <label>Status of Planisware Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not sent“(initial value)</fullName>
            </value>
            <value>
                <fullName>Successfully sent to Planisware</fullName>
            </value>
            <value>
                <fullName>Sending to Planisware failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>