force-app/main/default/objects/Opportunity/fields/pklLeadingSolutionField__c.field-meta.xml
<CustomField>
    <fullName>pklLeadingSolutionField__c</fullName>
    <label>Leading Solution Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>E2E</fullName>
            </value>
            <value>
                <fullName>MSS</fullName>
            </value>
            <value>
                <fullName>SEC</fullName>
            </value>
            <value>
                <fullName>VCS</fullName>
            </value>
            <value>
                <fullName>VOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>