force-app/main/default/objects/Opportunity/fields/pklTypeOfOffering__c.field-meta.xml
<CustomField>
    <fullName>pklTypeOfOffering__c</fullName>
    <label>Type of Offering</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>SRV​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>