force-app/main/default/objects/Opportunity/fields/pklTypeOfOpportunity__c.field-meta.xml
<CustomField>
    <fullName>pklTypeOfOpportunity__c</fullName>
    <label>Type of Opportunity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTA</fullName>
                <label>Long Term Agreement</label>
            </value>
            <value>
                <fullName>LTE</fullName>
                <label>Long Term Extension</label>
            </value>
            <value>
                <fullName>BCO</fullName>
                <label>Base Case Opportunity</label>
            </value>
            <value>
                <fullName>ACQ</fullName>
                <label>Acquisition Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>