force-app/main/default/objects/Opportunity/fields/rcnt_CountCompetitors__c.field-meta.xml
<CustomField>
    <fullName>rcnt_CountCompetitors__c</fullName>
    <description>Sum up the number of competitors, as lost reason increases</description>
    <label>Count Competitors</label>
    <summaryForeignKey>Competitor__c.mdr_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>