force-app/main/default/objects/Opportunity/fields/txa_LossReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>txa_LossReasonDescription__c</fullName>
    <description>To give more description why the Opportunity is Lost</description>
    <inlineHelpText>Detailed description of the lost deal</inlineHelpText>
    <label>Loss Reason Description</label>
    <type>TextArea</type>
</CustomField>