force-app/main/default/objects/Opportunity/recordTypes/FrameContract.recordType-meta.xml
<RecordType>
    <fullName>FrameContract</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <description>Record Type used for all chances that will end with Frame Contract creation</description>
    <label>Frame Contract</label>
</RecordType>