force-app/main/default/objects/Opportunity/recordTypes/StandardSolutionOrder.recordType-meta.xml
<RecordType>
    <fullName>StandardSolutionOrder</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <description>Record Type used for all chances that will end with Standard Solution Order</description>
    <label>Standard Solution Order</label>
</RecordType>