force-app/main/default/objects/Opportunity/validationRules/Loss_reason_must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_reason_must_be_filled</fullName>
    <active>true</active>
    <description>Loss reason must be filled when the opportunity is closed lost</description>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Lost&quot;) &amp;&amp; 
OR(ISPICKVAL(Loss_Reason__c, &apos;&apos;),
ISPICKVAL(Loss_Reason__c, &apos;Other&apos;) &amp;&amp; ISBLANK( Loss_Reason_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>The loss reason and description must be provided</errorMessage>
</ValidationRule>