force-app/main/default/objects/Opportunity/validationRules/LossDescriptionMustBeFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>LossDescriptionMustBeFilled</fullName>
    <active>true</active>
    <description>Loss description must be filled when the opportunity is closed lost and the Loss Reason is &#39;Other&#39;</description>
    <errorConditionFormula>AND(
ISPICKVAL( StageName , &quot;Closed Lost&quot;),
ISPICKVAL(pkl_LossReason__c, &#39;Other&#39;),
ISBLANK( txa_LossReasonDescription__c ),
NOT($Permission.BypassValidations)
)</errorConditionFormula>
    <errorDisplayField>txa_LossReasonDescription__c</errorDisplayField>
    <errorMessage>The loss reason description must be provided.</errorMessage>
</ValidationRule>