force-app/main/default/objects/Opportunity/validationRules/LossReasonMustBeFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReasonMustBeFilled</fullName>
    <active>true</active>
    <description>Loss reason must be filled when the opportunity is lost</description>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Lost&quot;) &amp;&amp; 
ISPICKVAL(pkl_LossReason__c, &#39;&#39;)
 &amp;&amp; NOT($Permission.BypassValidations)</errorConditionFormula>
    <errorDisplayField>pkl_LossReason__c</errorDisplayField>
    <errorMessage>The loss reason must be provided when the opportunity is closed lost</errorMessage>
</ValidationRule>