force-app/main/default/objects/Opportunity/validationRules/OpportunityStage_SalesChance.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityStage_SalesChance</fullName>
    <active>true</active>
    <description>A qualified Opportunity cannot return to the Sales Stage</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;Sales Chance&quot;)),
  ISPICKVAL(StageName, &quot;Sales Chance&quot;),
  Not($Permission.KAM_Permission_set)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Once qualified, Sales Chances must be set to a different Stage.</errorMessage>
</ValidationRule>