force-app/main/default/objects/Opportunity/validationRules/OpportunityStageQualified.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityStageQualified</fullName>
    <active>true</active>
    <description>Only KAM can qualify opportunities.</description>
    <errorConditionFormula>AND(
     OR(
       AND(ISCHANGED(StageName),
           NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;Acquisition (Sell)&quot;)),
           ISPICKVAL(StageName, &quot;Acquisition (Sell)&quot;)
       ),
       AND(ISNEW(),ISPICKVAL(StageName, &quot;Acquisition (Sell)&quot;)
     )
   ),
   Not($Permission.QualifyOpp),
   Not($Permission.BypassValidations)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Only key account manager or other user with required permissions can qualify opportunites.</errorMessage>
</ValidationRule>