force-app/main/default/objects/Opportunity/validationRules/OpportunityStageSalesChance.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityStageSalesChance</fullName>
    <active>true</active>
    <description>A qualified Opportunity cannot return to the Sales Stage</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &#39;Sales Chance&#39;),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Once qualified, Sales Chances must be set to a different Stage.</errorMessage>
</ValidationRule>