force-app/main/default/objects/Opportunity/validationRules/ValidateOppName.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateOppName</fullName>
    <active>true</active>
    <description>Validates the Name of an Opportunity to only contain roman characters ,numbers and limited special characters</description>
    <errorConditionFormula>NOT(REGEX(Name, &quot;[a-zA-Z0-9 /\\-\\.]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please Enter Name only in English.</errorMessage>
</ValidationRule>