force-app/main/default/objects/Opportunity/listViews/SSP_Long_Term_Business_Chance_Ideas.listView-meta.xml
<ListView>
    <fullName>SSP_Long_Term_Business_Chance_Ideas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Sales Chance</value>
    </filters>
    <label>Long Term Business Chance Ideas</label>
</ListView>