force-app/main/default/objects/Opportunity/listViews/Standard_Opportunities.listView-meta.xml
<ListView>
    <fullName>Standard_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:1045</value>
    </filters>
    <label>Standard Opportunities</label>
</ListView>